--- a/src/styles.css
+++ b/src/styles.css
@@ -6,23 +6,23 @@ h1 {
 
 h2 {
   display: inline;
-  font-size: 60px;
+  font-size: 80px;
   margin-left: 20px;
 }
 
 h3 {
   display: inline;
-  font-size: 30px;
+  font-size: 50px;
 }
 
 h4 {
-  font-size: 30px;
+  font-size: 40px;
   margin-left: 20px;
 }
 
 li {
   list-style: none;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 footer {
@@ -42,6 +42,6 @@ footer {
   margin: 0 20px auto 20px;
 }
 
-.metric-temp {
-  text-decoration: none;
+.cloudy-icon {
+  font-size: 200px;
 }
