--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,12 @@ h3 {
 h4 {
   font-size: 40px;
   margin-left: 20px;
+  text-transform: capitalize;
+}
+
+h5 {
+  font-size: 30px;
+  margin-left: 20px;
 }
 
 li {
