--- a/src/styles.css
+++ b/src/styles.css
@@ -65,3 +65,9 @@ footer {
   margin-top: 20px;
   text-align: center;
 }
+
+@media (max-width: 736px) {
+  .card {
+    margin-bottom: 20px;
+    }
+}
