--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  min-width: 700px;
+  min-width: 330px;
 }
 
 h1 {
@@ -43,7 +43,6 @@ footer {
 
 .weather-app {
   max-width: 700px;
-  
   margin: 60px auto;
 }
 
@@ -70,8 +69,15 @@ footer {
   text-align: center;
 }
 
-@media (max-width: 736px) {
+@media (max-width: 726px) {
+  .weather-app {
+    min-width: 700px;
+    
+  }
+
   .card {
-    margin-bottom: 20px;
-    }
+    min-width: 676px;
+     }
+
+  
 }
