Adapted responsive columns to sm, added @media css

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body {
-  min-width: 330px;
+  margin: 50px;
+  min-width: 300px;
 }
 
 h1 {
@@ -42,8 +43,8 @@ footer {
 }
 
 .weather-app {
-  max-width: 700px;
-  margin: 60px auto;
+   margin: 60px auto;
+   max-width: 660px;
 }
 
 .card {
@@ -69,15 +70,69 @@ footer {
   text-align: center;
 }
 
-@media (max-width: 400px) {
-  .weather-app {
-    min-width: 700px;
-    
+
+@media (max-width: 767px) {
+  body {
+    margin: 10px auto;
+    min-width: 310px;
   }
-
-  .card {
-    min-width: 676px;
-     }
-
   
+  h1 {
+    font-size: 40px;
+    font-weight: bolder;
+    margin-top: 10px;
+  }
+  
+  h2 {
+    display: inline;
+    font-size: 28px;
+  }
+  
+  h3 {
+    display: inline;
+    font-size: 25px;
+  }
+  
+  h4 {
+    font-size: 20px;
+    text-transform: capitalize;
+  }
+  
+  h5 {
+    font-size: 10px;
+  }
+  
+  ul {
+   display: none; 
+  }
+  
+  footer {
+    margin: none;
+    text-align: center;
+  }
+  
+  .weather-app {
+     margin: 30px auto;
+
+  }
+  
+  .card {
+   margin-bottom: 20px;
+   padding: 10px;
+  }
+  
+.search-button {
+  margin-top: 10px;
 }
+  
+ 
+  .forecast {
+    font-size: 12px;
+    font-weight: 350;
+    margin-top: 10px;
+    text-align: center;
+  }
+.season-image {
+  min-width: 30px;
+}
+  }
